--- a/MyProfilePage.html
+++ b/MyProfilePage.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <header>
-       <a href="#" class="logo">Claire</a>
+       <a href="#" class="logo">Claire Dayonot</a>
 
        <nav>
-        <a href="#" class="active">Home</a>
-        <a href="#" >Basic Information</a>
+        <a href="#" class="active" onclick="showSection('home')">Home</a>
+        <a href="#" onclick="showSection('basic')">Basic Information</a>
         <a href="#" >Contact</a>
        </nav>
     </header>
-    <section class="home">
+    <section id="home-section" class="home">
         <div class="home-img">
             <img src="/Images/PP.jpg" alt="ProfilePic">
         </div>
@@ -33,5 +33,35 @@
             </div>
         </div>
     </section>
+
+    <section id="basic-info-section" class="basic" style="display: none;">
+        <div class="home-img">
+            <img src="/Images/PP.jpg" alt="ProfilePic">
+        </div>
+        <div class="home-content">
+            <h1>Basic Information</h1>
+            <p><strong>Name:</strong>Mary Claire H.D Dayonot</p>
+            <p><strong>Date of Birth:</strong>August 8, 2024</p>
+            <p><strong>Gender:</strong>Female</p>
+            <p><strong>Nationality:</strong>Filipino</p>
+            <p><strong>Hobbies:</strong>Reading and Freediving</p>
+        </div>
+    </section>
+
+    <script>
+        function showSection(section){
+            const home = document.getElementById('home-section');
+            const basic = document.getElementById('basic-info-section');
+            
+            if(section == 'home'){
+                home.style.display = 'flex';
+                basic.style.display = 'none';
+            }
+            else if (section === 'basic'){
+                home.style.display = 'none';
+                basic.style.display = 'flex';
+            }
+        }
+    </script>
 </body>
 </html>
